# warhub-catalog

./: .gitattributes  .gitignore  Directory.Build.props  Directory.Packages.props  LICENSE  README.md  WarHub.Catalog.slnx
tools/acquisition/: pyproject.toml
tools/acquisition/scripts/: classify_local.py  gen_paint_barcodes.py  gen_paint_harvest.py  gen_paint_swatches.py
tools/acquisition/src/warhub_acquisition/: cli.py  ean.py  report.py  taxonomy.py  yamlio.py
tools/acquisition/src/warhub_acquisition/acquire/: client.py  cursor.py  extract.py  health.py  robots.py  runner.py
tools/acquisition/src/warhub_acquisition/acquire/strategies/: __init__.py  _playwright_browser.py  algolia.py  appsync.py  barcode_db.py  cdx_archive.py  mr_hobby.py  (+10 more)
tools/acquisition/src/warhub_acquisition/classify/: __init__.py  _llm_common.py  apply.py  joins.py  llm.py  queue.py
tools/acquisition/src/warhub_acquisition/evidence/: store.py
tools/acquisition/src/warhub_acquisition/migrate/: labels.py  legacy.py  runner.py  seed.py  verify.py
tools/acquisition/src/warhub_acquisition/models/: catalog.py  descriptor.py  observation.py
tools/acquisition/src/warhub_acquisition/resolve/: attributes.py  corroborate.py  identity.py  join.py  resolver.py
tools/acquisition/src/warhub_acquisition/swatch/: __init__.py  grid_image.py  item_image.py  pdf_chart.py
tools/acquisition/tests/: test_acquire_client.py  test_acquire_runner.py  test_attributes.py  test_classify_apply.py  test_classify_joins.py  test_classify_llm.py  test_classify_queue.py  test_cli.py  test_cli_acquire.py  test_corroborate.py  test_cursor.py  test_descriptor.py  test_ean.py  test_ean_guard.py  test_evidence_store.py  test_golden_fixture.py  test_gw_trade_sheets.py  test_identity.py  test_join.py  test_labels.py  test_live_smoke.py  test_live_smoke_playwright_wp.py  test_live_smoke_woo.py  test_migrate_legacy.py  test_migrate_runner.py  test_migrate_seed.py  test_migrate_verify.py  test_models.py  test_package.py  test_repo_data.py  test_report.py  test_resolver.py  test_robots.py  test_strategy_algolia.py  test_strategy_appsync.py  test_strategy_barcode_db.py  test_strategy_cdx.py  test_strategy_mr_hobby.py  test_strategy_playwright_wp.py  test_strategy_reaper.py  (+12 more)
tools/acquisition/tests/fixtures/algolia/: gw-page.json
tools/acquisition/tests/fixtures/appsync/: cb-infinity-page.json
tools/acquisition/tests/fixtures/barcode_db/: goupc-hit.html  upcitemdb-hit.json  upcitemdb-miss.json
tools/acquisition/tests/fixtures/cdx/: goblin-archived-product.html  goblin-cdx-page.json  gw-legacy-product.html  tistaminis-archived-product.html
tools/acquisition/tests/fixtures/mr_hobby/: cat1-page1.html  cat1-page2.html  cat6-page1.html  detail-1.html  detail-19.html  detail-22.html  detail-2828.html  detail-2947.html  detail-drift.html
tools/acquisition/tests/fixtures/playwright/: cmon-no-h1-product.html  cmon-product-hellscape.html  cmon-product-line-asoiaf-tmg.html  cmon-product-line-massive-darkness.html  cmon-product-standalone.html  cmon-product-stark.html  cmon-product.html  cmon-sitemap-lines.xml  cmon-sitemap-products.xml
tools/acquisition/tests/fixtures/reaper/: core-colors.html  paint-sets.html  triads.html
tools/acquisition/tests/fixtures/shopify/: warlord-bulk-page1.json  warlord-detail.js.json
tools/acquisition/tests/fixtures/shopify_paints/: monument-bulk-page1.json  monument-detail.js.json  scale75-scalecolor-p1.json  scale75-umbrella-p1.json  tap-bulk-page1.json  tap-detail.js.json
tools/acquisition/tests/fixtures/sitemap_sd/: gamenerdz-product.html  gamenerdz-sitemap-index.xml  gamenerdz-sitemap-pages1.xml  gamenerdz-sitemap-products1.xml  radaddel-product.html  radaddel-sitemap-1.xml  radaddel-sitemap-index.xml
tools/acquisition/tests/fixtures/sitemap_sd_paints/: gsw-category-122.html  gsw-product-1864.html  gsw-product-2417.html  gsw-sitemap-en.xml
tools/acquisition/tests/fixtures/woo/: mantic-product-ldjson.html  mantic-store-page1.json  para-bellum-store-page1.json
tools/acquisition/tests/fixtures/woo_paints/: ak-paints-page1.json  ak-quick-page1.json
tools/acquisition/tests/fixtures/wp_rest_paints/: vallejo-cats-page1.json  vallejo-media.json  vallejo-products-page1.json
(+614 files in other folders)
