[project]
name = "warhub-acquisition"
version = "0.1.0"
description = "WarHub catalog data acquisition and resolution pipeline"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.scripts]
warhub-data = "warhub_acquisition.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/warhub_acquisition"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
    "live: real network integration test (opt-in only, e.g. `pytest -m live`; excluded by default)",
]
