[project]
name = "warhub-acquisition"
version = "0.1.0"
description = "WarHub catalog data acquisition and resolution pipeline"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Only needed by acquire/strategies/playwright_wp.py's REAL browser fetcher (Task 10, CMON --
# a Cloudflare-walled marketing site that 403s to curl/httpx and needs a JS-capable client). Kept
# out of the base dependency set deliberately: descriptor validation, the strategy registry, and
# the full non-live test suite must all work with playwright absent (the module's own docstring
# explains the lazy-import seam). `uv sync --extra browser` + `playwright install chromium` to use
# the live path.
browser = ["playwright>=1.40"]

[project.scripts]
warhub-data = "warhub_acquisition.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/warhub_acquisition"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
    "live: real network integration test (opt-in only, e.g. `pytest -m live`; excluded by default)",
]
