[project]
name = "warhub-acquisition"
version = "0.1.0"
description = "WarHub catalog data acquisition and resolution pipeline"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    # OOXML workbook reader for the gw-trade-sheets strategy (GW's trade site publishes its
    # barcode registers as .xlsx). Base dependency rather than an extra: unlike playwright, this
    # needs no browser download and the strategy is part of the default nightly source set.
    "openpyxl>=3.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Only needed by acquire/strategies/playwright_wp.py's REAL browser fetcher (Task 10, CMON --
# a Cloudflare-walled marketing site that 403s to curl/httpx and needs a JS-capable client). Kept
# out of the base dependency set deliberately: descriptor validation, the strategy registry, and
# the full non-live test suite must all work with playwright absent (the module's own docstring
# explains the lazy-import seam). `uv sync --extra browser` + `playwright install chromium` to use
# the live path.
browser = ["playwright>=1.40"]
# Only needed by the swatch subsystem (swatch/pdf_chart.py + scripts/gen_paint_swatches.py):
# pdfplumber parses chart PDFs and renders pages via its pypdfium2 backend, Pillow does the
# pixel sampling and contact sheets. An extra (not base deps) because swatch generation is an
# on-demand, human-reviewed step -- the acquire pipeline and test suite must not require a PDF
# stack. `uv sync --extra swatch` (or `uv run --extra swatch ...`) to use.
swatch = ["pdfplumber>=0.11", "Pillow>=10"]

[project.scripts]
warhub-data = "warhub_acquisition.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/warhub_acquisition"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
    "live: real network integration test (opt-in only, e.g. `pytest -m live`; excluded by default)",
]
